[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/temp_inn_ui.png" type="Texture" id=1]
[ext_resource path="res://Scripts/RunInn.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="temp_inn_ui" type="Sprite" parent="."]
position = Vector2( 510.495, 296.439 )
scale = Vector2( 1.17142, 1.23163 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="temp_inn_ui"]
margin_left = -337.956
margin_top = -183.14
margin_right = -273.956
margin_bottom = -153.14
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Inventory
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="temp_inn_ui"]
margin_left = -62.4778
margin_top = -181.839
margin_right = -8.47784
margin_bottom = -151.839
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "For Sale"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShortRest" type="Button" parent="."]
modulate = Color( 0.862745, 0.839216, 1, 1 )
margin_left = 341.703
margin_top = 116.941
margin_right = 595.703
margin_bottom = 142.941
custom_colors/font_color = Color( 0.517647, 0.145098, 0.301961, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
text = "Take a short nap                          10GP"
flat = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestButton" type="Button" parent="."]
modulate = Color( 0.862745, 0.839216, 1, 1 )
margin_left = 342.762
margin_top = 151.903
margin_right = 596.762
margin_bottom = 177.903
custom_colors/font_color = Color( 0.517647, 0.145098, 0.301961, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
text = "Rest for the Night                       20GP"
flat = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Textbox" type="RichTextLabel" parent="."]
margin_left = 639.0
margin_top = 376.0
margin_right = 976.0
margin_bottom = 498.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Hello and Welcome to DINNer, the Finer Diner Inn."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yesno" type="Node2D" parent="."]
visible = false

[node name="Text" type="RichTextLabel" parent="Yesno"]
margin_left = 643.526
margin_top = 508.056
margin_right = 868.526
margin_bottom = 526.056
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Accept the Offer?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yes" type="Button" parent="Yesno"]
margin_left = 645.337
margin_top = 530.713
margin_right = 737.337
margin_bottom = 559.713
text = "Yes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No" type="Button" parent="Yesno"]
margin_left = 797.878
margin_top = 530.769
margin_right = 889.878
margin_bottom = 559.769
text = "No"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ShortRest" to="." method="_on_ShortRest_pressed"]
[connection signal="pressed" from="RestButton" to="." method="_on_RestButton_pressed"]
[connection signal="pressed" from="Yesno/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="Yesno/No" to="." method="_on_No_pressed"]
